# rs-datatype

./: .gitignore  .rs-ci-cargo-matrix.json  COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  README.md  README.zh_CN.md  ci-check.sh  rustfmt.toml
.github/workflows/: ci.yml
benches/: numeric_comparison_bench.rs  numeric_conversion_bench.rs  owned_identity_conversion_bench.rs  scalar_collection_bench.rs
doc/: quality_followup_design_2026-07-17.zh_CN.md  quality_followup_plan_2026-07-17.zh_CN.md  refactor_followup_design_2026-07-14.zh_CN.md  refactor_followup_plan_2026-07-14.zh_CN.md  refactor_plan_2026-07-12.zh_CN.md  user_guide.md  user_guide.zh_CN.md  v050_conversion_profiles_duration_plan_2026-07-14.zh_CN.md  v050_release_readiness_fix_plan_2026-07-14.zh_CN.md
docs/superpowers/plans/: 2026-07-16-readme-usage-alignment.md
docs/superpowers/specs/: 2026-07-16-readme-usage-alignment-design.md
fuzz/: Cargo.toml
fuzz/corpus/conversion_text/: exact_min_f32_subnormal  exact_min_f64_subnormal  long_inexact_power_of_five
fuzz/fuzz_targets/: conversion_text.rs  numeric_comparison.rs  scalar_collection.rs
src/: lib.rs
src/converter/: blank_string_policy.rs  boolean_conversion_options.rs  boolean_literal_conflict_error.rs  boolean_numeric_policy.rs  collection_conversion_options.rs  data_conversion_error.rs  data_conversion_error_kind.rs  data_conversion_options.rs  data_conversion_result.rs  data_conversion_target.rs  data_convert_to.rs  data_converter.rs  data_converters.rs  data_format.rs  data_list_conversion_error.rs  data_list_conversion_result.rs  duration_conversion_options.rs  duration_unit.rs  empty_item_policy.rs  mod.rs  numeric_conversion_policy.rs  scalar_item.rs  scalar_item_error.rs  scalar_items.rs  scalar_string_data_converters.rs  string_conversion_options.rs  string_normalization_error.rs
src/converter/data_converter/: boolean.rs  duration.rs  numeric.rs  source.rs  string_source.rs  structured.rs  text.rs
src/converter/error/: boolean_literal_conflict_error.rs  conversion_limit.rs  data_conversion_error.rs  data_conversion_error_kind.rs  data_format.rs  data_list_conversion_error.rs  duration_overflow_error.rs  invalid_value_reason.rs  mod.rs  scalar_item_error.rs  string_normalization_error.rs
src/converter/options/: blank_string_policy.rs  boolean_conversion_options.rs  boolean_numeric_policy.rs  collection_conversion_options.rs  data_conversion_options.rs  duration_conversion_options.rs  duration_rounding_policy.rs  duration_unit.rs  empty_item_policy.rs  float_rounding_policy.rs  fractional_to_integer_policy.rs  mod.rs  numeric_conversion_limits.rs  numeric_conversion_options.rs  numeric_conversion_policy.rs  string_conversion_options.rs  structured_conversion_limits.rs  suffixless_duration_policy.rs
src/datatype/: data_type.rs  data_type_of.rs  data_type_parse_error.rs  data_type_table.rs  mod.rs
src/duration/: duration_overflow_error.rs  duration_parse_error.rs  duration_text_options.rs  duration_unit.rs  duration_unit_parse_mode.rs  duration_unit_suffix_set.rs  format_duration_exact.rs  mod.rs  parse_duration_text.rs  suffixless_duration_policy.rs
src/lang/: mod.rs
src/lang/converter/: data_converter.rs  data_converters.rs
src/lang/datatype/: data_type.rs
src/numeric/: compare_numeric.rs  mod.rs  number_ref.rs  numeric_comparison_policy.rs  numeric_value.rs  numeric_value_ref.rs
src/numeric/internal/: exact_decimal.rs  exact_rational.rs  fixed_numeric.rs  mod.rs  number_repr.rs
src/serde/: duration_millis.rs  duration_millis_with_unit.rs  duration_with_unit.rs  mod.rs
src/serde/internal/: duration_millis_with_unit_visitor.rs  duration_with_unit_visitor.rs  mod.rs
tests/: lib_tests.rs
tests/converter/: blank_string_policy_tests.rs  boolean_conversion_options_tests.rs  boolean_literal_conflict_error_tests.rs  boolean_numeric_policy_tests.rs  collection_conversion_options_tests.rs  data_conversion_error_kind_tests.rs  data_conversion_error_tests.rs  data_conversion_options_tests.rs  data_conversion_target_tests.rs  data_convert_to_tests.rs  data_converter_tests.rs  data_converters_tests.rs  data_list_conversion_error_tests.rs  duration_conversion_options_tests.rs  duration_unit_tests.rs  empty_item_policy_tests.rs  mod.rs  numeric_conversion_policy_tests.rs  scalar_item_tests.rs  scalar_items_tests.rs  scalar_string_data_converters_tests.rs  string_conversion_options_tests.rs
tests/converter/data_converter/: boolean_tests.rs  duration_tests.rs  mod.rs  numeric_tests.proptest-regressions  numeric_tests.rs  source_tests.rs  string_source_tests.rs  structured_tests.rs  text_tests.rs
tests/converter/error/: boolean_literal_conflict_error_tests.rs  conversion_limit_tests.rs  data_conversion_error_kind_tests.rs  data_conversion_error_tests.rs  data_format_tests.rs  data_list_conversion_error_tests.rs  duration_overflow_error_tests.rs  invalid_value_reason_tests.rs  (+3 more)
tests/datatype/: data_type_of_tests.rs  data_type_parse_error_tests.rs  data_type_table_tests.rs  data_type_tests.rs  mod.rs
tests/duration/: duration_overflow_error_tests.rs  duration_parse_error_tests.rs  duration_text_options_tests.rs  duration_text_tests.rs  duration_unit_parse_mode_tests.rs  duration_unit_suffix_set_tests.rs  duration_unit_tests.rs  format_duration_exact_tests.rs  mod.rs  parse_duration_text_tests.rs  suffixless_duration_policy_tests.rs
tests/lang/: mod.rs
tests/numeric/: compare_numeric_tests.rs  mod.rs  number_ref_api_tests.rs  number_ref_comparison_tests.rs  number_ref_tests.rs  numeric_comparison_policy_tests.rs  numeric_value_ref_tests.rs  numeric_value_tests.rs
tests/serde/: duration_millis_tests.rs  duration_millis_with_unit_tests.rs  duration_with_unit_tests.rs  mod.rs
(+76 files in other folders)
