[package]
name = "qubit-datatype"
version = "0.2.4"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-datatype"
description = "Runtime data type descriptors and conversion utilities for Rust"
homepage = "https://github.com/qubit-ltd/rs-datatype"
documentation = "https://docs.rs/qubit-datatype"
readme = "README.md"
keywords = ["datatype", "conversion", "utility", "qubit"]
categories = ["data-structures", "development-tools", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_datatype"
doctest = true
test = false

[dependencies]
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
