[package]
name = "qubit-datatype"
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-datatype"
description = "Runtime data type descriptors and conversion utilities for Rust"
homepage = "https://github.com/qubit-ltd/rs-datatype"
documentation = "https://docs.rs/qubit-datatype"
readme = "README.md"
keywords = ["datatype", "conversion", "utility", "qubit"]
categories = ["data-structures", "development-tools", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_datatype"
doctest = true
test = false

[features]
default = []
chrono = ["dep:chrono"]
big-number = ["dep:bigdecimal", "dep:num-bigint", "dep:num-traits"]
url = ["dep:url"]
json = ["dep:serde_json"]
converter = ["chrono", "big-number", "url", "json", "dep:thiserror"]

[dependencies]
bigdecimal = { version = "0.4", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "2.0", optional = true }
url = { version = "2.5", optional = true }

[dev-dependencies]
serde_json = "1.0"
