[package]
name = "qubit-datatype"
version = "0.9.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-datatype"
description = "Runtime data type descriptors and conversion utilities for Rust"
homepage = "https://github.com/qubit-ltd/rs-datatype"
documentation = "https://docs.rs/qubit-datatype"
readme = "README.md"
keywords = ["datatype", "conversion", "utility", "qubit"]
categories = ["data-structures", "development-tools", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/benches/**",
    "/src/**",
    "/tests/**",
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "qubit_datatype"
doctest = true
test = false

[features]
default = []
duration = []
chrono = ["dep:chrono"]
big-integer = [
    "dep:num-bigint",
    "dep:num-rational",
    "dep:num-traits",
]
big-decimal = [
    "dep:bigdecimal",
    "dep:num-bigint",
    "dep:num-rational",
    "dep:num-traits",
]
big-number = ["big-integer", "big-decimal"]
url = ["dep:url"]
json = ["dep:serde_json"]
converter = ["duration"]
all = ["converter", "chrono", "big-number", "url", "json"]

[dependencies]
bigdecimal = { version = "0.4", optional = true }
chrono = { version = "0.4", default-features = false, features = ["std"], optional = true }
num-bigint = { version = "0.4", optional = true }
num-rational = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
url = { version = "2.5", optional = true }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
proptest = "1.0"
serde_json = "1.0"

[[bench]]
name = "numeric_conversion_bench"
harness = false
required-features = ["converter"]

[[bench]]
name = "numeric_comparison_bench"
harness = false
required-features = ["big-number"]

[[bench]]
name = "scalar_collection_bench"
harness = false
required-features = ["converter"]

[[bench]]
name = "owned_identity_conversion_bench"
harness = false
required-features = ["converter"]
